--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "serve": "vite preview"
   },
   "devDependencies": {
+    "sass": "^1.48.0",
     "vite": "^2.5.4"
   },
   "main": "dist/style.css",
